--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <h1>Etch-a-Sketch</h1>
+    <button id="resize">Resize</button>
+<div class="grid-container">
 
+</div>
 
 
     <script src="./app.js"></script>
