got reset and resize to work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Etch-a-Sketch</h1>
     <button id="resize">Resize</button>
+    <button id="reset">Reset</button>
+
 <div class="grid-container">
 
 </div>
