--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <button id="resize">Resize</button>
-    <button id="reset">Reset</button>
-
-<div class="grid-container">
-
-</div>
+    
+    <div class="grid-wrapper">
+        <div class="grid-container"></div>
+    </div>
+    <div class="btn-container">
+        <button id="resize">Resize</button>
+        <button id="reset">Reset</button>
+    </div>
 
 
     <script src="./app.js"></script>
